fix sidebar collapse and dashboard expand

--- a/assests/css/main.css
+++ b/assests/css/main.css
@@ -3,6 +3,7 @@
     max-width: 1365px;
     background-color: #F8F9FA;
     display: flex;
+    box-sizing: border-box;
     height: 720px;
     align-items: self-start;
     font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
